--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://testmate-db.cxkzvlrjaprj.us-east-1.rds.amazonaws.com/testmate
+#TABLE admins exits already
 spring.datasource.username=prouser
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
