--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,35 @@
-spring.datasource.url=jdbc:mysql://testmate-db.cxkzvlrjaprj.us-east-1.rds.amazonaws.com/testmate
-#TABLE admins exits already
-spring.datasource.username=prouser
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/ExamPortal
+spring.datasource.username=root
+spring.datasource.password=acer
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=debug
+server.error.whitelabel.enabled=false
+
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=36000
+server.port=9000
+
+
+#Configure Multipart File for Servlet
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+
+# Send Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=exam.testmate@gmail.com
+spring.mail.password=qqcnvdxmyihncobk
+spring.mail.protocol=smtp
+spring.mail.test-connection=false
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
