--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ExamPortal
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=acer
+
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=debug
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=debug
 server.error.whitelabel.enabled=false
+
 
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
@@ -13,15 +15,17 @@ spring.session.timeout.seconds=36000
 server.port=9000
 server.address=0.0.0.0
 
+
 #Configure Multipart File for Servlet
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
 
 # Send Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=exam.testmate@gmail.com
-spring.mail.password=qqcnvdxmyihncobk
+spring.mail.password=qwjbclcewagrzwkj
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
 
